# CUDA-kmeans-clustering

./: .gitignore  CMakeLists.txt  README.md
src/device/: kMeans_kernel.cu  kMeans_utils.cuh
src/host/: main.cpp  utils.cpp
src/include/: device_utils.h  host_utils.h
